force-app/main/default/objects/Account_Call_Product__c/Account_Call_Product__c.object-meta.xml
<CustomObject>
    <label>Account Call Product</label>
    <nameField>
        <label>Call Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Call Product</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>