force-app/main/default/objects/Account_Call_Product__c/fields/AccountCall__c.field-meta.xml
<CustomField>
    <fullName>AccountCall__c</fullName>
    <label>AccountCall</label>
    <referenceTo>Account_Call__c</referenceTo>
    <relationshipLabel>Account Call Product</relationshipLabel>
    <relationshipName>Account_Call_Product</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>