force-app/main/default/objects/Account_Call_Product__c/fields/Call_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Call_Product_Name__c</fullName>
    <formula>Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Product Name</label>
    <type>Text</type>
</CustomField>