force-app/main/default/objects/Account_Call_Product__c/fields/Detailing_Order__c.field-meta.xml
<CustomField>
    <fullName>Detailing_Order__c</fullName>
    <label>Detailing Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>