force-app/main/default/objects/Account_Call_Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Account Call Product</relationshipLabel>
    <relationshipName>Account_Call_Product</relationshipName>
    <type>Lookup</type>
</CustomField>